syntax = "proto3";
package pb;

import "code.proto";

message C2SPackageMsg {
    uint64 UserID = 1;
    bytes Body    = 2;
}

message S2CPackageMsg {
    uint64 UserID = 1;
    bytes Body    = 2;
}

message UserLoginReq {
    uint64 UserID = 1;
}

message UserLoginResp {
    ErrCode Code    = 1;
    uint32 ServerID = 2;
}

message CreateNewUserReq {
    uint64 UserID = 1;
}

message CreateNewUserResp {
    ErrCode Code = 1;
}